<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_4"
    android:layout_marginVertical="@dimen/dimen_16">

    <ImageView
        android:id="@+id/ivItems"
        android:layout_width="@dimen/dimen_110"
        android:layout_height="@dimen/dimen_110"
        android:contentDescription="@string/item_image"
        android:src="@drawable/content_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:textColor="@color/black"
        android:textSize="@dimen/size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivItems"
        tools:text="@string/item_1" />

    <TextView
        android:id="@+id/tvItemTPrice"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:textColor="@color/black"
        android:textSize="@dimen/size_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvItemTitle"
        tools:text="@string/mrp_100" />


</androidx.constraintlayout.widget.ConstraintLayout>