<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bar_bg"
    android:paddingTop="@dimen/dimen_34"
    android:paddingEnd="@dimen/dimen_34"
    android:paddingBottom="@dimen/dimen_20">

    <TextView
        android:id="@+id/tvExplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_50"
        android:text="@string/explore"
        android:textColor="@color/black"
        android:textSize="@dimen/size_18"
        app:fontFamily="@font/inter_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/selected"
        android:textSize="@dimen/size_16"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintBaseline_toBaselineOf="@id/tvExplore"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSearchView"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/edit_text_shape"
        android:layout_marginStart="@dimen/dimen_34"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExplore"
        app:queryBackground="@null"
        app:queryHint="@string/search"
        app:searchIcon="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>